# granger_casualty

./: CMakeLists.txt  README.md  TODO  Untitled.ipynb  compile_commands.json
src/: Untitled.ipynb  VAR+estimation+with+and+without+exogenous+additional+regressors.ipynb  main.cpp  mathematics.h  noise.cpp  noise.h  polyfit.cpp  polyfit.h  statis.cpp  statis.h  utility.cpp  utility.h  var.cpp  var.h
src/.ipynb_checkpoints/: VAR+estimation+with+and+without+exogenous+additional+regressors-checkpoint.ipynb
